fixed z-index colorpicker

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -271,6 +271,7 @@ body{
   margin:0px;
 }
 
+.colorpicker {z-index:200;}
 #nodes {z-index:3;}
 #mover {z-index:2;}
 #canvas {z-index:1;}
